Created page with "<!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!                 Also, no line break after the page title!  --> {{GSoCIdea |Ebu..."

--- a/Google_Summer_of_Code%2F2012%2FIdeas%2FEbuild_Upstream_Scanner.mw
+++ b/Google_Summer_of_Code%2F2012%2FIdeas%2FEbuild_Upstream_Scanner.mw
@@ -1,6 +1,7 @@
 <!-- Important: The title must be the same as the page title, otherwise the link URL will be wrong!
                 Also, no line break after the page title!  -->
-{{GSoCIdea|Ebuild Upstream Scanner|year=2012|
+{{GSoCIdea
+|Ebuid Upstream Scanner|
 <!-- Description goes here: --> 
 euscan (Ebuild Upstream Scanner) is an utility to check if an ebuild
 have new upstream version. It was designed to provide the same
@@ -36,7 +37,7 @@ positive and be able to scan more package:
 Add an account system, and allow maintainer to register to subscribe
 to automatic weekly notifications. Integrate euscan with other webapps
 like http://portage.gentoo.org, http://znurt.org/,
-http://gpo.zugaina.org/, [[Gentoostats]] and try
+http://gpo.zugaina.org/, http://soc.dev.gentoo.org/gentoostats and try
 to create a single killer webapp . Add better overlay support and
 tweak django administration.
 |
@@ -52,5 +53,3 @@ tweak django administration.
 * Celery (optional)
 * HTML/CSS/JS (optional)
 }}
-
-[[Category:GSoC 2012 Ideas]]
