Initial commit of the page regarding the greek gentoo community, add meeting topics and info

--- a/Gentoo-el.mw
+++ b/Gentoo-el.mw
@@ -1,13 +1,23 @@
 == Greek Gentoo Linux Community / Ελληνική κοινότητα Gentoo Linux ==
-Official Website: [http://gentoo-el.org/ Greek Gentoo Community].
 
-IRC: [irc://chat.freenode.net/gentoo-el #gentoo-el] @ Freenode
+=== Meeting: ===
 
-Mailing List: gentoo-user-el@lists.gentoo.org
+* Κύριο Θέμα: FOSSCOMM
+* Ημερομηνία: TBA
+* Συμμετέχοντες: TBA
 
-=== Meetings ===
-* [[Gentoo-el/Meeting/2013-03| 2013-03]]
-* [[Gentoo-el/Meeting/2012-02| 2012-02 ]]
-
-
-[[Category:Project and Community]]
+==== Θέματα ====
+* Booth
+:*Ποιοι θα είναι παρόντες
+:*Αρμοδιότητες του καθενός
+* Υλικό
+:*Τι θα έχουμε και σε τι ποσότητα (DVD, flyers, αφίσες, κονκάρδες, αυτοκόλλητα)
+:*Χρηματοδότηση από το foundation και το eV
+:*Χρηματοδότηση από την τσέπη μας, εθελοντές και ποσό (προσεγγιστικά)
+* Παρουσιάσεις
+:*Συζήτηση για το αν θα γίνει παρουσίαση της διανομής ή/και της κοινότητας αυτή τη φορά.
+:*Εθελοντές για να κάνουν την παρουσίαση
+:*Άλλες ιδέες για παρουσίαση
+* Workshops
+:*Ως τώρα οι tomkap/nikhatzi προσφέρθηκαν να κάνουν ένα με θέμα crossdev/distcc
+:*Άλλη ιδέα για workshop, εθελοντές
