Created page with "Rxvt-unicode, known as urxvt is fast and lightweight terminal emulator.  == Install == {{emerge|x11-terms/rxvt-unicode}}  == Font == {{file|~/.Xresources||<pre> URxvt.font:      ..."

--- a/Rxvt-unicode.mw
+++ b/Rxvt-unicode.mw
@@ -1,195 +1,49 @@
-<languages />
-<translate>
-{{Lowercase title}}
-{{InfoBox stack
-|{{InfoBox homepage|http://software.schmorp.de/pkg/rxvt-unicode.html|header=true}}
-|{{InfoBox package|x11-terms/rxvt-unicode}}
-|{{InfoBox github|exg/rxvt-unicode|text=GitHub mirror}}
-|{{InfoBox odoc|http://pod.tst.eu/http://cvs.schmorp.de/rxvt-unicode/doc/rxvt.1.pod}}
-|{{InfoBox irc|rxvt-unicode}}
-}}
+Rxvt-unicode, known as urxvt is fast and lightweight terminal emulator.
 
-{{Important|[http://pod.tst.eu/http://cvs.schmorp.de/rxvt-unicode/doc/rxvt.7.pod#I_use_Gentoo_and_I_have_a_problem Bugs] which cannot be reproduced on ''[https://archlinux.org Arch GNU/Linux]'' might be ignored by upstream!
-}}
+== Install ==
+{{emerge|x11-terms/rxvt-unicode}}
 
-'''rxvt-unicode''', also known simply as {{c|urxvt}}, is [[Article description::a fast and lightweight [[terminal emulator]] with [[Wikipedia:Xft|Xft]] and [[Wikipedia:Unicode|Unicode]] support.]]
+== Font ==
+{{file|~/.Xresources||<pre>
+URxvt.font:               xft:Terminus:antialias=false:pixelsize=9
+</pre>}}
 
-Many Gentoo users enjoy using {{c|urxvt}} inside the [[i3]] and [[Sway]] window managers. 
+== Scrollbar ==
+{{file|~/.Xresources||<pre>
+URxvt.scrollBar:          false
+</pre>}}
 
-== Installation ==
+== Url handling ==
+{{file|~/.Xresources||<pre>
+URxvt.perl-ext-common:  default,matcher
+URxvt.urlLauncher:      /usr/bin/uzbl-browser
+URxvt.matcher.button:   1
+</pre>}}
 
-=== USE flags ===
-
-{{USEflag|package=x11-terms/rxvt-unicode}}
-
-{{Warning|Enabling the <code>buffer-on-clear</code> USE flag may result in garbled display of [[Wikipedia:ncurses|ncurses]] based programs like {{c|top}} (found in {{Package|sys-process/procps}}) or {{c|make menuconfig}}.}}
-
-=== Emerge ===
-
-Install {{Package|x11-terms/rxvt-unicode}}:
-
-{{Emerge|rxvt-unicode}}
-
-== Daemon ==
-
-It is possible to operate {{c|urxvt}} as a daemon, which will lead to lower resource usage and quicker startup for new terminals. It is a good idea to start the daemon at the beginning of the X session.
-
-The following command will start the daemon and fork it into the background.
-
-{{Cmd|urxvtd --quiet --opendisplay --fork}}
-
-After this, new clients can be opened on the single daemon process, rather than spawning new processes for each terminal. To do this, simply run {{c|urxvtc}} in place of the usual {{c|urxvt}} command. Keep in mind that if for any reason the daemon is terminated, any subsequent {{c|urxvtc}} calls as well all client instances will be closed.
-
-Environment variable can be used to specify different location for the daemon {{Path|~/.urxvt/urxvtd-hostname}} listening socket. 
-
-{{CodeBox|title=The socket location as environment variable|lang=bash|1=
-export RXVT_SOCKET='/tmp/urxvt-socket'
-}}
-
-== Configuration ==
-
-Configuration for {{c|urxvt}} is done mainly through the [[X resources]] system, though command line equivalents are also available in most cases. A full list of these options can be found in the {{c|urxvt}} [https://linux.die.net/man/1/urxvt manpage]. To configure all {{c|urxvt}} options in a different file and including this file in .Xresources my be advisable. For example:
-
-{{FileBox|filename=~/.Xresources|1=
-...
-#include ".config/urxvt"
-...
-}}
-  
-Some common configuration options are listed below.
-
-{{Note|It is recommended to become familiar with the [[X resources]] syntax before editing the configuration.}}
-
-=== Font ===
-
-{{c|urxvt}}'s [[fonts|font]] can be configured using either [[Wikipedia:X logical font description|XLFD]] notation or, provided the package was compiled with the <code>xft</code> USE flag, [[Wikipedia:Xft|Xft]] fonts.
-
-{{FileBox|filename=~/.Xresources|1=
-! Using XLFD (created via e.g. xfontsel)
-URxvt*font:           -misc-fixed-medium-r-semicondensed-*-12-90-100-*-c-60-iso8859-1
-! Using Xft
-URxvt*font:           xft:Inconsolata:size=8
-}}
-
-Fonts can be modified while {{c|urxvt}} is running by assigning actions to keys:
-
-{{FileBox|filename=~/.Xresources|1=
-! Bind C-p to use unifont and show 'halfwidth left corner bracket', U+FF62,｢
-URxvt.keysym.C-p: 	command:\033]710;xft:Unifont:pixelsize=20\007
-! Bind C--, C-0(=) and C-+ to activate small, medium, and big font size resp. 
-URxvt.keysym.C-minus: 	command:\033]710;xft:Liberation Mono:pixelsize=12\007
-URxvt.keysym.C-0:	command:\033]710;xft:DejaVu Sans Mono:pixelsize=16\007
-URxvt.keysym.C-plus:	command:\033]710;xft:Liberation Mono:pixelsize=20\007
-}}
-
-{{Warning|In some fonts, depending on the font size, [[Wikipedia:Unicode|Unicode]] may not work properly.}}
-
-Rendering settings can be tweaked for Xft fonts as well. Note that this is not specific to {{c|urxvt}}.
-
-{{FileBox|filename=~/.Xresources|1=
-Xft.dpi:        96
-Xft.antialias:  true
-Xft.rgba:       rgb
-Xft.hinting:    true
-Xft.hintstyle:  hintslight
-Xft.autohint:   false
-Xft.lcdfilter:  lcddefault
-}}
-
-=== Scrollbar ===
-
-The look of the scrollbar can be changed, or it can be removed entirely.
-
-{{FileBox|filename=~/.Xresources|1=
-URxvt.scrollBar: false
-URxvt.scrollBar_right: false
-URxvt.scrollBar_floating: false
-URxvt.scrollstyle: rxvt
-}}
-
-=== Printing ===
-
-By default, {{c|urxvt}} will print out a screen dump, via {{c|lpr}}, when {{Key|PrntScrn}} is pressed. Using {{Key|Ctrl}}+{{Key|PrintScrn}} or {{Key|Shift}}-{{Key|PrintScrn}} will include the terminal's scroll back in the printout as well. This behavior can be changed, or disabled entirely, based on personal preference and need.
-
-{{FileBox|filename=~/.Xresources|1=
-! The string will be interpreted as if typed into the shell as-is.
-! In this example, printing will be disabled altogether.
-URxvt.print-pipe: "cat > /dev/null"
-}}
-
-=== Copy/Paste and URL handling ===
-
-The default {{c|urxvt}} [[Perl]] extensions can be used for copy and paste actions as well for URL handling capabilities. In order to use Perl extensions in {{c|urxvt}}, the package must have been compiled with the <code>perl</code> USE flag. The {{Package|x11-misc/urxvt-perls}} package provides the '''keyboard-select''' extension not included by default. The package sources code can be found in muennich's [https://github.com/muennich/urxvt-perls GitHub repository] or an [https://github.com/tokiclover/bar-overlay/tree/master/dev-perl/perl-URxvt ebuild] for example. It is possible to get other Perl [https://github.com/search?l=Perl&q=urxvt&type=Repositories&utf8=%E2%9C%93 extensions].
-
-Here is an example of a {{path|~/.Xresources}}. The following lines could also be added to {{path|~/.Xdefaults}}, though {{path|~/.Xresources}} is preferred.
-
-{{FileBox|filename=~/.Xresources|1=
-!-*- Perl extensions -*-
-URxvt.perl-ext-common: default,selection-to-clipboard,pasta,matcher,keyboard-select
-URxvt.keysym.M-u:     perl:url-select:select_next
-URxvt.url-launcher:   /usr/bin/firefox
-URxvt.underlineURLs:  True
-URxvt.matcher.button: 1 
-URxvt.keysym.M-Escape:perl:keyboard-select:activate
-URxvt.keysym.Control-Shift-V:     perl:pasta:paste
-! Comment this if you don't want copy when text is selected
-URxvt.clipboard.autocopy: true
-}}
-
-The default selection-to-clipboard extension will put the selected text into the clipboard automatically. To add pasting functionality we have to create a simple extension:
-
-{{FileBox|filename=/usr/lib/urxvt/perl/pasta|lang=perl|1=
-#! /usr/bin/env perl -w
-# Author:   Aaron Caffrey
-# Website:  https://github.com/wifiextender/urxvt-pasta
-# License:  GPLv3
-
-# Usage: put the following lines in your .Xdefaults/.Xresources:
-# URxvt.perl-ext-common           : selection-to-clipboard,pasta
-# URxvt.keysym.Control-Shift-V    : perl:pasta:paste
-
-use strict;
-
-sub on_user_command {
-  my ($self, $cmd) = @_;
-  if ($cmd eq "pasta:paste") {
-    $self->selection_request (urxvt::CurrentTime, 3);
-  }
-  ()
-}
-}}
-
-=== Icons ===
-
-==== Menu icon ====
-
-This adds menu entry and menu icon for {{c|urxvt}}. If {{c|urxvt}} doesn't have a {{Path|.desktop}} file, create one.
-
-{{FileBox|filename=/usr/share/applications/urxvt.desktop|lang=ini|1=
+== Icons ==
+=== Menu icon ===
+This adds menu entry and menu icon for urxvt.
+If urxvt doesnt have a .desktop file, create one.
+{{file|/usr/share/applications/urxvt.desktop||<pre>
 [Desktop Entry]
 Name=Urxvt
 Comment=Terminal emulator
 TryExec=urxvt
 Exec=urxvt
-Icon=utilities-terminal
+Icon=terminal
 Type=Application
-Categories=GTK;TerminalEmulator;System;
-# This assumes the 'startup-notification' USE flag being enabled
+Categories=GNOME;GTK;Utility;TerminalEmulator;System;
 StartupNotify=true
-}}
+</pre>}}
 
-==== Application icon ====
-
-For setting application icon {{Package|x11-terms/rxvt-unicode}} has to be compiled with <code>pixbuf</code> USE flag.
-{{FileBox|filename=~/.Xresources|1=
+=== Application icon ===
+For setting application icon urxvt has to be compiled with afterimage USE flag.
+{{file|~/.Xresources||<pre>
 URxvt.iconFile:    /usr/share/icons/hicolor/scalable/apps/Terminal.svg
-}}
+</pre>}}
 
-=== Color theme ===
-
-The main {{c|urxvt}}'s color palette is defined by <code>background</code>, <code>foreground</code> and <code>color'''n'''</code> resources. It is also possible to set color of other elements (e.g. cursor or text underline). For more information consult the {{c|urxvt}} [https://linux.die.net/man/1/urxvt manpage].
-
-{{FileBox|filename=~/.Xresources|1=
+== Color theme ==
+{{file|~/.Xresources||<pre>
 *background: #0f0f0f
 *foreground: #c8c8c8
 
@@ -217,162 +71,4 @@ The main {{c|urxvt}}'s color palette is defined by <code>background</code>, <cod
 !white
 *color7:  #efefef
 *color15: #efefef
-}}
-
-{{FileBox|filename=~/.Xresources|title=Tango colors|1=
-! black
-*color0:  #2E3436
-*color8:  #555753
-! red
-*color1:  #a40000
-*color9:  #EF2929
-! green
-*color2:  #4E9A06
-*color10: #8AE234
-! yellow
-*color3:  #C4A000
-*color11: #FCE94F
-! blue
-*color4:  #3465A4
-*color12: #729FCF
-! purple
-*color5:  #75507B
-*color13: #AD7FA8
-! orange (replaces cyan)
-*color6:  #ce5c00
-*color14: #fcaf3e
-! white
-*color7:  #babdb9
-*color15: #EEEEEC
-}}
-
-{{FileBox|filename=~/.Xresources|title=Linux colors|1=! Colors
-URxvt*background: #000000
-URxvt*foreground: #B2B2B2
-! black
-URxvt*color0:  #000000
-URxvt*color8:  #686868
-! red
-URxvt*color1:  #B21818
-URxvt*color9:  #FF5454
-! green
-URxvt*color2:  #18B218
-URxvt*color10: #54FF54
-! yellow
-URxvt*color3:  #B26818
-URxvt*color11: #FFFF54
-! blue
-URxvt*color4:  #1818B2
-URxvt*color12: #5454FF
-! purple
-URxvt*color5:  #B218B2
-URxvt*color13: #FF54FF
-! cyan
-URxvt*color6:  #18B2B2
-URxvt*color14: #54FFFF
-! white
-URxvt*color7:  #B2B2B2
-URxvt*color15: #FFFFFF
-}}
-
-=== Using urxvt with Powerline fonts ===
-
-Unfortunately current default {{c|urxvt}} configuration in Gentoo breaks support for [https://github.com/powerline/powerline Powerline] characters. Overview of the problem: some fonts provide incorrect values for character width, which breaks their appearance in {{c|urxvt}} in various ways.
-
-The Powerline symbols are extra Unicode characters, which can be added to a font by "patching" it, or they can be added to the system without patching, using fontconfig settings. These fonts often contain wrong width set for the Powerline characters. Some other terminals workaround that, but not {{c|urxvt}}. 
-
-To get Powerline symbols to work correctly, you need the following USE flags to {{Package|x11-terms/rxvt-unicode}}:
-* <code>vanilla</code> - disables the equally problematic <code>alt-font-width</code>
-* <code>unicode3</code>
-* <code>256-color</code> - enables the required support of displaying 256 colors
-
-For ''app-misc/powerline'' from the [https://github.com/leycec/raiagent raiagent] overlay, enable USE flag:
-* <code>fonts</code>, which will pull in ''media-fonts/powerline-fonts'' package.
-
-For ''media-fonts/powerline-fonts'' (also from the [https://github.com/leycec/raiagent raiagent] overlay), enable one or more USE flags for the fonts you care about, e.g. <code>inconsolata</code>.
-
-{{Note|The installation of patched fonts from ''media-fonts/powerline-fonts'' package is the preferred installation method according the [https://powerline.readthedocs.io/en/master/installation/linux.html#fonts-installation Powerline documentation]. The alternative method using the standard fonts and enabling Gentoo's {{Package|media-fonts/powerline-symbols}} via [[Fontconfig]] does not seem to work for {{c|urxvt}}. Nevertheless, the {{Package|media-fonts/powerline-symbols}} is a mandatory dependency of ''app-misc/powerline'' so it gets installed anyway.}}
-
-Finally, in the {{Path|~/.Xresources}} file, set a desired Powerline font for {{c|urxvt}}. This example assumes the <code>xft</code> USE flag for {{Package|x11-terms/rxvt-unicode}}, but the main point is to enable the font featuring <code>for Powerline</code> name part.
-{{FileBox|title=urxvt Powerline font configuration|filename=~/.Xresources|1=
-URxvt*font:   xft:Inconsolata for Powerline:size=11}} 
-
-{{Important|After making changes to {{Path|~/.Xresources}}, you need to run a command like
-{{Cmd|xrdb ~/.Xresources}} to let the changes have effect.}}
-
-See also [http://lists.schmorp.de/pipermail/rxvt-unicode/2016q1/002204.html rxvt-unicode and the Powerline symbols] thread on the {{c|urxvt}} mailing list.
-
-=== Changing font size on the fly ===
-
-To be able to use font size changing within running terminal session, first verify {{c|urxvt}} has been build using the <code>perl</code> USE flag. 
-
-Install the {{Package|x11-misc/urxvt-font-size}} package:
-
-{{emerge|x11-misc/urxvt-font-size}}
-
-Open the {{Path|~/.Xresources}} file for editing and replace the entry:
-
-{{FileBox|filename=~/.Xresources|1=
-!-*- Perl extensions -*-
-URxvt.perl-ext-common: default,selection-to-clipboard,pasta,matcher,keyboard-select
-...
-}}
-
-With following entry, or just add the <code>font-size</code> to the end of the listed extensions:
-
-{{FileBox|filename=~/.Xresources|1=
-!-*- Perl extensions -*-
-URxvt.perl-ext-common: default,selection-to-clipboard,pasta,matcher,keyboard-select,font-size
-...
-}}
-
-Configure a keyboard key combination to increase or decrease the font size, add following entries:
-
-{{FileBox|filename=~/.Xresources|1=
-...
-URxvt.keysym.C-Up:     font-size:increase
-URxvt.keysym.C-Down:   font-size:decrease
-URxvt.keysym.C-S-Up:   font-size:incglobal
-URxvt.keysym.C-S-Down: font-size:decglobal
-URxvt.keysym.C-equal:  font-size:reset
-URxvt.keysym.C-slash:  font-size:show
-...
-}}
-
-To increase the font size press {{key|Ctrl}}+{{Key|+}}, to decrease the font size press {{key|Ctrl}}+{{Key|-}}. To reset to the default font size press {{key|Ctrl}}+{{Key|0}}.
-
-== Troubleshooting ==
-
-=== Changes in ~/.Xresources are not applied ===
-
-1. Check for syntax errors in {{Path|~/.Xresources}} based on [[X_resources]] article.
-
-2. If you're using ~/.xinitrc add <code><nowiki>[[ -f ~/.Xresources ]] && xrdb -merge ~/.Xresources</nowiki></code> to ~/.xinitrc and reboot.
-
-3. Invoking `xrdb -merge -I$HOME ~/.Xresources`might also resolve the issue.
-
-=== Reporting bugs ===
-
-{{Note|This 'Reporting bugs' section is satire.}}
-
-This section describes the instructions for reporting and fixing {{c|urxvt}} bugs.
-
-# Install Arch GNU/Linux.
-## Test on Arch to see if the bug persists.
-### If the bug does not persist, then contact the ebuild maintainer {{Dev|jer}}. The ebuild maintainer may be able to make a fix.
-# Contact upstream developer. Be sure to note testing was performed on Gentoo Linux as Gentoo GNU/Linux or you will be ignored and possibly yelled at.
-# When all else fails, contact the maintainer {{Dev|jer}} and fix it this way.
-
-These instructions are based on official upstream [http://pod.tst.eu/http://cvs.schmorp.de/rxvt-unicode/doc/rxvt.7.pod#I_use_Gentoo_and_I_have_a_problem instructions from the developer].
-
-== See also ==
-
-* {{See also|X resources}}
-* {{See also|Fonts}}
-
-== External resources ==
-* [https://linux.die.net/man/1/urxvt urxvt(1) manpage]
-* [https://terminal.sexy Terminal Color Scheme Designer]
-
-[[Category:Software]]
-</translate>
+</pre>}}
